# all-cpp-websocket-client-server

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  README.md  sh_build_everything.sh  sh_build_sample__basic-client-server.sh  sh_check_if_up_to_date.sh  sh_ensure_wasm_compiler.sh  sh_format.sh  sh_install_one_git_thirdparty.sh  sh_tidy.sh
client-side/src/application/utilities/: TraceLogger.hpp
client-side/web-wasm-loader/: package-lock.json
client-side/web-wasm-loader/src/: main.ts
client-web/: .gitignore  Makefile  sh_build.sh
client-web/src/: main.cpp
client-web/src/application/: Application.cpp  Application.hpp  defines.hpp
client-web/src/application/network/: WebSocketConnection.cpp  WebSocketConnection.hpp
client-web/src/network-wrapper/: AbstractWebSocketConnection.hpp
client-web/src/network-wrapper/native/: createWebSocketConnection.hpp
client-web/src/network-wrapper/wasm/: createWebSocketConnection.cpp
client-web/src/utilities/: TraceLogger.cpp  TraceLogger.hpp
client-web/web-wasm-loader/: bun-build.js  package.json
client-web/web-wasm-loader/js/: bundle.js
client-web/web-wasm-loader/pages/: index.html
client-web/web-wasm-loader/src/: Application.ts  Logger.ts  main.ts
client-web/web-wasm-loader/src/environment/: index.ts  isWasmSupported.ts  isWebSocketSupported.ts
client-web/web-wasm-loader/src/helpers/: index.ts  scriptLoadingUtility.ts
diagrams/: mindmap.dot
network-wrapper/: CMakeLists.txt  Makefile  sh_build.sh
network-wrapper/src/network-wrapper/common/: AbstractTcpListener.cpp  AbstractTcpListener.hpp
network-wrapper/src/network-wrapper/common/internals/: TcpListener.cpp  TcpListener.hpp
network-wrapper/src/network-wrapper/http-server/: AbstractHttpServer.cpp  AbstractHttpServer.hpp
network-wrapper/src/network-wrapper/http-server/internals/: HttpConnection.cpp  HttpConnection.hpp  HttpServer.cpp  HttpServer.hpp  boostHeaders.hpp
network-wrapper/src/network-wrapper/utilities/: SafeQueue.hpp  TestAndSetAtomicLock.cpp  TestAndSetAtomicLock.hpp  stdVectorNoReallocErase.hpp
network-wrapper/src/network-wrapper/websocket-client/: AbstractWebSocketConnection.cpp  AbstractWebSocketConnection.hpp
network-wrapper/src/network-wrapper/websocket-client/native/: createWebSocketConnection.hpp
network-wrapper/src/network-wrapper/websocket-client/native/internals/: WebSocketConnection.cpp  WebSocketConnection.hpp
network-wrapper/src/network-wrapper/websocket-client/native/internals/worker-thread/: AbstractWorkerThread.cpp  AbstractWorkerThread.hpp
network-wrapper/src/network-wrapper/websocket-client/native/internals/worker-thread/internals/: ThreadSynchronizer.cpp  ThreadSynchronizer.hpp  WorkerThread.cpp  WorkerThread.hpp
network-wrapper/src/network-wrapper/websocket-client/wasm/: createWebSocketConnection.cpp  createWebSocketConnection.hpp
network-wrapper/src/network-wrapper/websocket-client/wasm/internals/: WebSocketConnection.cpp  WebSocketConnection.hpp
network-wrapper/src/network-wrapper/websocket-server/: AbstractWebSocketServer.cpp  AbstractWebSocketServer.hpp  IWebSocketSession.hpp  callbacks.hpp
network-wrapper/src/network-wrapper/websocket-server/internals/: WebSocketServer.cpp  WebSocketServer.hpp  WebSocketSession.cpp  WebSocketSession.hpp  boostHeaders.hpp
samples/basic-client-server/: CMakeLists.txt
samples/basic-client-server/client-side/: .gitignore  CMakeLists.txt  Makefile  sh_build.sh
samples/basic-client-server/client-side/scripts/: sh_ensure_web_wasm_loader.sh
samples/basic-client-server/client-side/src/application/: Application.cpp  Application.hpp  main.cpp
samples/basic-client-server/client-side/src/application/utilities/: TraceLogger.cpp  TraceLogger.hpp
samples/basic-client-server/client-side/web-wasm-loader/: .gitignore
samples/basic-client-server/client-side/web-wasm-loader/configs/: bunjs-build.js  rollupjs-build.js
samples/basic-client-server/client-side/web-wasm-loader/src/: Application.ts
samples/basic-client-server/server-side/: CMakeLists.txt  Makefile  sh_refresh_file_manager_assets_folder.sh
samples/basic-client-server/server-side/scripts/: sh_refresh_file_manager_assets_folder.sh
samples/basic-client-server/server-side/src/application/: main.cpp
samples/basic-client-server/server-side/src/application/https-server/: HttpFileServer.cpp  HttpFileServer.hpp
samples/basic-client-server/server-side/src/application/https-server/file-manager/: FileManager.cpp  FileManager.hpp
samples/basic-client-server/server-side/src/application/https-server/file-manager/gzip/: compress.hpp  config.hpp
samples/basic-client-server/server-side/src/application/websocket-server/: WebSocketMainLogicServer.cpp  WebSocketMainLogicServer.hpp
samples/basic-client-server/server-side/src/application/websocket-server/session-manager/: AbstractWebSocketSessionManager.cpp  AbstractWebSocketSessionManager.hpp  WebSocketSessionManager.cpp  WebSocketSessionManager.hpp
samples/basic-client-server/server-side/src/application/websocket-server/session-manager/internals/: ThreadSafeWebSocketSessionManager.cpp  ThreadSafeWebSocketSessionManager.hpp  ThreadUnsafeWebSocketSessionManager.cpp  ThreadUnsafeWebSocketSessionManager.hpp
scripts/: sh_build_with_cmake.sh  sh_ensure_wasm_compiler.sh  sh_format.sh  sh_install_one_git_thirdparty.sh  sh_tidy.sh
server-side/: .gitignore  Makefile  sh_refresh_file_manager_assets_folder.sh
server-side/src/: main.cpp
server-side/src/application/: main.cpp
server-side/src/application/https-server/: HttpFileServer.cpp  HttpFileServer.hpp
server-side/src/application/websocket-server/: WebSocketMainLogicServer.cpp  WebSocketMainLogicServer.hpp
server-side/src/https-server/: HttpFileServer.cpp  HttpFileServer.hpp
server-side/src/https-server/file-manager/: FileManager.cpp  FileManager.hpp
server-side/src/network-wrapper/common/: AbstractTcpListener.cpp  (+3 more)
server-side/src/websocket-server/: WebSocketMainLogicServer.cpp  WebSocketMainLogicServer.hpp
tests/: CMakeLists.txt  Makefile
tests/src/websockets-session/: test_web_socket_session.cpp
(+54 files in other folders)
